# slop-browser

./: Cargo.toml  LICENSE  README.md
assets/: default.css
src/: lib.rs  main.rs
src/app/: browser.rs  history.rs  mod.rs  settings.rs  tab.rs
src/css/: cascade.rs  computed.rs  index.rs  mod.rs  parser.rs  selector.rs  stylesheet.rs
src/dom/: document.rs  mod.rs  node.rs  parser.rs
src/input/: events.rs  keyboard.rs  mod.rs  mouse.rs
src/js/: dom_bindings.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/layout/: block.rs  box_model.rs  flex.rs  grid.rs  inline.rs  mod.rs  table.rs  text.rs  tree.rs
src/net/: async_loader.rs  cache.rs  http.rs  loader.rs  mod.rs
src/render/: gpu.rs  image_cache.rs  mod.rs  painter.rs  text.rs  texture.rs
src/render/shaders/: image.wgsl
src/ui/: chrome.rs  mod.rs
